adds test cases and puts the code into jsonFormatter module

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coffee Assignment",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers coffee:coffee-script/register",
+    "test": "mocha --require coffee-script/register 'test/**/*.coffee'",
     "dev_build": "coffee main.coffee"
   },
   "author": "Divyanshu Verma",
@@ -14,6 +14,7 @@
     "coffee-script": "^1.12.7",
     "mocha": "^4.0.1",
     "pluralize": "^7.0.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "sinon": "^4.1.1"
   }
 }
